--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <img class="banner__hand" src="img/hand.png" alt="hand">
 </div>
 
-<main class="offers">
-    <section class="content-section">
+<main class="main">
+    <section class="content-section content-section--offers">
         <div class="content-section__bg"></div>
         <div class="content-section__wrapper">
             <h2 class="offers__title">
@@ -72,7 +72,8 @@
                     <img class="offers-list__photo" src="img/iphone-1screen.png" alt="iphone-1screen">
                     <figcaption>
                         <h3 class="offers-list__title">Поднимает настроение</h3>
-                        <p class="offers-list__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+                        <p class="offers-list__text">Приложение позволит вам победить осеннюю хандру и депрессию
+                            буквально в несколько кликов!</p>
                     </figcaption>
                 </figure>
 
@@ -80,7 +81,8 @@
                     <img class="offers-list__photo" src="img/iphone-2screen.png" alt="iphone-2screen">
                     <figcaption>
                         <h3 class="offers-list__title">Меняет мир вокруг</h3>
-                        <p class="offers-list__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+                        <p class="offers-list__text">Сделайте снимок и украсьте его смайликом или текстовой подписью,
+                            чтобы усилить эффект</p>
                     </figcaption>
                 </figure>
 
@@ -88,16 +90,15 @@
                     <img class="offers-list__photo" src="img/iphone-3screen.png" alt="iphone-3screen">
                     <figcaption>
                         <h3 class="offers-list__title">Заводит новых друзей</h3>
-                        <p class="offers-list__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+                        <p class="offers-list__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
+                            заводите новых</p>
                     </figcaption>
                 </figure>
             </div>
         </div>
     </section>
-</main>
 
-<div class="facts">
-    <section class="content-section">
+    <section class="content-section content-section--facts">
         <div class="content-section__bg"></div>
         <div class="content-section__wrapper">
             <img class="facts__timer" src="img/timer.svg" alt="timer">
@@ -112,10 +113,9 @@
             </div>
         </div>
     </section>
-</div>
 
-<div class="testimonials">
-    <section class="content-section">
+
+    <section class="content-section content-section--testimonials">
         <div class="content-section__wrapper">
             <img class="testimonials__image" src="img/quotes.svg" alt="quotes">
 
@@ -133,8 +133,8 @@
                         </cite>
 
                         <span class="comments__author-info">
-                            25 лет, водитель трамвая
-                        </span>
+                                25 лет, водитель трамвая
+                            </span>
                     </blockquote>
 
                     <blockquote class="swiper-slide">
@@ -147,8 +147,8 @@
                         </cite>
 
                         <span class="comments__author-info">
-                            23 лет, дизайнер
-                        </span>
+                                23 лет, дизайнер
+                            </span>
                     </blockquote>
 
                     <blockquote class="swiper-slide">
@@ -161,8 +161,8 @@
                         </cite>
 
                         <span class="comments__author-info">
-                            27 лет, экономист
-                        </span>
+                                27 лет, экономист
+                            </span>
                     </blockquote>
                 </div>
                 <!-- Add Arrows -->
@@ -171,22 +171,20 @@
             </div>
         </div>
     </section>
-</div>
 
-<div class="tariffs">
-    <section class="content-section">
+    <section class="content-section content-section--tariffs">
         <div class="content-section__bg"></div>
         <div class="content-section__wrapper">
             <table class="tariffs-table">
-                <tr class="tariffs-table__row tariffs-table__header">
-                    <th class="tariffs-table__header-item tariffs-table__header-item--empty"></th>
+                <tr class="tariffs-table__row">
+                    <th class="tariffs-table__item tariffs-table__item--header tariffs-table__item--empty"></th>
 
-                    <th class="tariffs-table__header-item">
+                    <th class="tariffs-table__item tariffs-table__item--header">
                         <span class="tariffs-table__header-title">база</span>
                         <span class="tariffs-table__header-value">1,99 USD</span>
                     </th>
 
-                    <th class="tariffs-table__header-item">
+                    <th class="tariffs-table__item tariffs-table__item--header">
                         <span class="tariffs-table__header-title">стандарт</span>
                         <span class="tariffs-table__header-value">3,99 USD</span>
 
@@ -195,7 +193,7 @@
                         </div>
                     </th>
 
-                    <th class="tariffs-table__header-item">
+                    <th class="tariffs-table__item tariffs-table__item--header">
                         <span class="tariffs-table__header-title">анлим</span>
                         <span class="tariffs-table__header-value">9,99 USD</span>
                     </th>
@@ -266,10 +264,9 @@
             </table>
         </div>
     </section>
-</div>
 
-<div class="contacts">
-    <section class="content-section">
+
+    <section class="content-section content-section--contacts">
         <div class="content-section__wrapper">
             <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
 
@@ -277,27 +274,25 @@
                 <div class="contacts__item">
                     <h3 class="contacts__item-title">Звоните:</h3>
 
-                    <span class="contacts__item-text">+7 (812) 555-66-66</span>
+                    <a href="tel:+7(812)555-66-66" class="contacts__item-text">+7 (812) 555-66-66</a>
                 </div>
 
                 <div class="contacts__item">
                     <h3 class="contacts__item-title">Приезжайте в гости:</h3>
 
-                    <span class="contacts__item-text">ул. Большая Конюшенная, 19/8</span>
+                    <address class="contacts__item-text">ул. Большая Конюшенная, 19/8</address>
                 </div>
 
                 <div class="contacts__item">
                     <h3 class="contacts__item-title">Пишите:</h3>
 
-                    <span class="contacts__item-text">mail@htmlacademy.ru</span>
+                    <a href="mailto:mail@htmlacademy.ru" class="contacts__item-text">mail@htmlacademy.ru</a>
                 </div>
             </div>
         </div>
     </section>
-</div>
 
-<div class="map">
-    <section class="content-section">
+    <section class="content-section content-section--map">
         <div class="content-section__bg"></div>
         <div class="content-section__wrapper">
             <div class="map__main" id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
@@ -306,35 +301,33 @@
             </div>
         </div>
     </section>
-</div>
+</main>
 
-<footer class="footer">
-    <section class="content-section">
-        <div class="content-section__wrapper">
-            <a class="footer__link-logo" href="/">
-                <img class="footer__logo" src="img/logo-footer.svg" alt="footer-logo">
+<footer class="content-section content-section--footer">
+    <div class="content-section__wrapper">
+        <a class="footer__link-logo" href="/">
+            <img class="footer__logo" src="img/logo-footer.svg" alt="footer-logo">
+        </a>
+
+        <div class="footer__socials">
+            <a class="footer__socials-item" href="javascript:;">
+                <img class="footer__socials-item-logo" src="img/twitter.svg" alt="twitter-logo">
             </a>
 
-            <div class="footer__socials">
-                <a class="footer__socials-item" href="javascript:;">
-                    <img class="footer__socials-item-logo" src="img/twitter.svg" alt="twitter-logo">
-                </a>
+            <a class="footer__socials-item" href="javascript:;">
+                <img class="footer__socials-item-logo" src="img/facebook.svg" alt="facebook-logo">
+            </a>
 
-                <a class="footer__socials-item" href="javascript:;">
-                    <img class="footer__socials-item-logo" src="img/facebook.svg" alt="facebook-logo">
-                </a>
-
-                <a class="footer__socials-item" href="javascript:;">
-                    <img class="footer__socials-item-logo" src="img/youtube.svg" alt="youtube-logo">
-                </a>
-            </div>
-
-            <div class="footer__rights">
-                <span class="footer__rights-text">Разработано</span>
-                <img class="footer__rights-logo" src="img/htmlacademy.svg" alt="htmlacademy-logo">
-            </div>
+            <a class="footer__socials-item" href="javascript:;">
+                <img class="footer__socials-item-logo" src="img/youtube.svg" alt="youtube-logo">
+            </a>
         </div>
-    </section>
+
+        <div class="footer__rights">
+            <span class="footer__rights-text">Разработано</span>
+            <img class="footer__rights-logo" src="img/htmlacademy.svg" alt="htmlacademy-logo">
+        </div>
+    </div>
 </footer>
 
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
