--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 
 <main class="main">
-    <section class="content-section content-section--offers">
+    <section class="content-section offers">
         <div class="content-section__bg"></div>
         <div class="content-section__wrapper">
             <h2 class="offers__title">
@@ -98,7 +98,7 @@
         </div>
     </section>
 
-    <section class="content-section content-section--facts">
+    <section class="content-section facts">
         <div class="content-section__bg"></div>
         <div class="content-section__wrapper">
             <img class="facts__timer" src="img/timer.svg" alt="timer">
@@ -115,7 +115,7 @@
     </section>
 
 
-    <section class="content-section content-section--testimonials">
+    <section class="content-section testimonials">
         <div class="content-section__wrapper">
             <img class="testimonials__image" src="img/quotes.svg" alt="quotes">
 
@@ -172,7 +172,7 @@
         </div>
     </section>
 
-    <section class="content-section content-section--tariffs">
+    <section class="content-section tariffs">
         <div class="content-section__bg"></div>
         <div class="content-section__wrapper">
             <table class="tariffs-table">
@@ -266,7 +266,7 @@
     </section>
 
 
-    <section class="content-section content-section--contacts">
+    <section class="content-section contacts">
         <div class="content-section__wrapper">
             <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
 
@@ -292,7 +292,7 @@
         </div>
     </section>
 
-    <section class="content-section content-section--map">
+    <section class="content-section map">
         <div class="content-section__bg"></div>
         <div class="content-section__wrapper">
             <div class="map__main" id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
@@ -303,7 +303,7 @@
     </section>
 </main>
 
-<footer class="content-section content-section--footer">
+<footer class="content-section footer">
     <div class="content-section__wrapper">
         <a class="footer__link-logo" href="/">
             <img class="footer__logo" src="img/logo-footer.svg" alt="footer-logo">
