added tariffs, map, contacts

--- a/index.html
+++ b/index.html
@@ -296,6 +296,109 @@
                     </td>
                 </tr>
             </table>
+
+            <div class="swiper-container--table">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="tariffs-table__item tariffs-table__item--header tariffs-table__item--first">
+                            <span class="tariffs-table__header-title">база</span>
+                            <span class="tariffs-table__header-value">1,99 USD</span>
+                        </div>
+
+                        <div class="tariffs-table__item">
+                            <div class="tariffs-table__item-wrapper">
+                                <span class="tariffs-table__title">Розовый фильтр</span>
+                                <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                                <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                            </div>
+                        </div>
+
+                        <div class="tariffs-table__item">
+                            <div class="tariffs-table__item-wrapper">
+                                <span class="tariffs-table__title">Смайлики</span>
+                                <img class="tariffs-table__status" src="img/check.svg" alt="check" hidden>
+                                <img class="tariffs-table__status" src="img/cross.svg" alt="cross">
+                            </div>
+                        </div>
+
+                        <div class="tariffs-table__item">
+                            <div class="tariffs-table__item-wrapper">
+                                <span class="tariffs-table__title">Комментарии</span>
+                                <img class="tariffs-table__status" src="img/check.svg" alt="check" hidden>
+                                <img class="tariffs-table__status" src="img/cross.svg" alt="cross">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="tariffs-table__item tariffs-table__item--header">
+                            <span class="tariffs-table__header-title">стандарт</span>
+                            <span class="tariffs-table__header-value">3,99 USD</span>
+
+                            <div class="tariffs-table__sticker&#45;&#45;wrapper">
+                                <div class="tariffs-table__sticker">хит</div>
+                            </div>
+                        </div>
+
+                        <div class="tariffs-table__item">
+                            <div class="tariffs-table__item-wrapper">
+                                <span class="tariffs-table__title">Розовый фильтр</span>
+                                <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                                <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                            </div>
+                        </div>
+
+                        <div class="tariffs-table__item">
+                            <div class="tariffs-table__item-wrapper">
+                                <span class="tariffs-table__title">Смайлики</span>
+                                <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                                <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                            </div>
+                        </div>
+
+                        <div class="tariffs-table__item">
+                            <div class="tariffs-table__item-wrapper">
+                                <span class="tariffs-table__title">Комментарии</span>
+                                <img class="tariffs-table__status" src="img/check.svg" alt="check" hidden>
+                                <img class="tariffs-table__status" src="img/cross.svg" alt="cross">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="tariffs-table__item tariffs-table__item--header tariffs-table__item--last">
+                            <span class="tariffs-table__header-title">анлим</span>
+                            <span class="tariffs-table__header-value">9,99 USD</span>
+                        </div>
+
+                        <div class="tariffs-table__item">
+                            <div class="tariffs-table__item-wrapper">
+                                <span class="tariffs-table__title">Розовый фильтр</span>
+                                <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                                <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                            </div>
+                        </div>
+
+                        <div class="tariffs-table__item">
+                            <div class="tariffs-table__item-wrapper">
+                                <span class="tariffs-table__title">Смайлики</span>
+                                <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                                <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                            </div>
+                        </div>
+
+                        <div class="tariffs-table__item">
+                            <div class="tariffs-table__item-wrapper">
+                                <span class="tariffs-table__title">Комментарии</span>
+                                <img class="tariffs-table__status" src="img/check.svg" alt="check">
+                                <img class="tariffs-table__status" src="img/cross.svg" alt="cross" hidden>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Add Pagination -->
+                <div class="swiper-pagination"></div>
+            </div>
         </div>
     </section>
 
