--- a/index.html
+++ b/index.html
@@ -37,50 +37,50 @@
     </div>
 </header>
 
-<main class="main">
-    <div class="banner">
-        <div class="banner-bg__wrapper">
-            <div class="banner-bg">
-                <picture>
-                    <source srcset="img/hand.png" media="(min-width: 1024px)">
-                    <source srcset="img/logo-header-tablet.svg" media="(min-width: 768px) and (max-width: 1023px)">
-                    <img src="img/hand-mobile.png" class="banner__hand" alt="hand">
-                </picture>
-            </div>
+<div class="banner">
+    <div class="banner-bg__wrapper">
+        <div class="banner-bg">
+            <picture>
+                <source srcset="img/hand.png" media="(min-width: 1024px)">
+                <source srcset="img/hand-tablet.png" media="(min-width: 768px) and (max-width: 1023px)">
+                <img src="img/hand-mobile.png" class="banner__hand" alt="hand">
+            </picture>
         </div>
+    </div>
 
-        <section class="banner__wrapper">
-            <div class="banner__sub-wrapper">
-                <h2 class="banner__title">Взгляните на жизнь иначе!</h2>
-                <div class="banner__info">
-                    <div class="banner__info-wrapper">
-                        <a class="banner__link" href="javascript:;">Скачать приложение</a>
+    <section class="banner__wrapper">
+        <div class="banner__sub-wrapper">
+            <h2 class="banner__title">Взгляните на жизнь иначе!</h2>
+            <div class="banner__info">
+                <div class="banner__info-wrapper">
+                    <a class="banner__link" href="javascript:;">Скачать приложение</a>
 
-                        <div class="banner__brands">
-                            <a class="banner__brand-link" href="https://www.apple.com/" target="_blank">
-                                <img class="banner__brand-apple" src="img/apple-logo.svg" alt="brand-apple">
-                            </a>
+                    <div class="banner__brands">
+                        <a class="banner__brand-link" href="https://www.apple.com/" target="_blank">
+                            <img class="banner__brand-apple" src="img/apple-logo.svg" alt="brand-apple">
+                        </a>
 
-                            <a class="banner__brand-link" href="https://www.android.com/" target="_blank">
-                                <img class="banner__brand-android" src="img/android-logo.svg" alt="brand-apple">
-                            </a>
+                        <a class="banner__brand-link" href="https://www.android.com/" target="_blank">
+                            <img class="banner__brand-android" src="img/android-logo.svg" alt="brand-apple">
+                        </a>
 
-                            <a class="banner__brand-link" href="https://www.microsoft.com/" target="_blank">
-                                <img class="banner__brand-microsoft" src="img/microsoft-logo.svg" alt="brand-apple">
+                        <a class="banner__brand-link" href="https://www.microsoft.com/" target="_blank">
+                            <img class="banner__brand-microsoft" src="img/microsoft-logo.svg" alt="brand-apple">
 
-                            </a>
-                        </div>
+                        </a>
+                    </div>
 
-                        <span class="banner__descr">
+                    <span class="banner__descr">
                         Доступно для iPhone, iPad, Android,
                         Windows Phone, OS X, Windows 8
                     </span>
-                    </div>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
+</div>
 
+<main class="main">
     <section class="content-section offers">
         <div class="content-section__bg"></div>
         <div class="content-section__wrapper">
@@ -92,36 +92,42 @@
                 Нам есть, что вам предложить!
             </h2>
 
-            <div class="offers-list">
-                <figure class="offers-list__item">
-                    <img class="offers-list__photo" src="img/iphone-1screen.png" alt="iphone-1screen">
-                    <figcaption>
-                        <h3 class="offers-list__title">Поднимает настроение</h3>
-                        <p class="offers-list__text">Приложение позволит вам победить осеннюю хандру и депрессию
-                            буквально в несколько кликов!</p>
-                    </figcaption>
-                </figure>
 
-                <figure class="offers-list__item">
-                    <img class="offers-list__photo" src="img/iphone-2screen.png" alt="iphone-2screen">
-                    <figcaption>
-                        <h3 class="offers-list__title">Меняет мир вокруг</h3>
-                        <p class="offers-list__text">Сделайте снимок и украсьте его смайликом или текстовой подписью,
-                            чтобы усилить эффект</p>
-                    </figcaption>
-                </figure>
+            <div class="offers__main">
+                <div class="offers-list">
+                    <figure class="offers-list__item">
+                        <img class="offers-list__photo" src="img/iphone-1screen.png" alt="iphone-1screen">
+                        <figcaption>
+                            <h3 class="offers-list__title">Поднимает настроение</h3>
+                            <p class="offers-list__text">Приложение позволит вам победить осеннюю хандру и депрессию
+                                буквально в несколько кликов!</p>
+                        </figcaption>
+                    </figure>
 
-                <figure class="offers-list__item">
-                    <img class="offers-list__photo" src="img/iphone-3screen.png" alt="iphone-3screen">
-                    <figcaption>
-                        <h3 class="offers-list__title">Заводит новых друзей</h3>
-                        <p class="offers-list__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
-                            заводите новых</p>
-                    </figcaption>
-                </figure>
+                    <figure class="offers-list__item">
+                        <img class="offers-list__photo" src="img/iphone-2screen.png" alt="iphone-2screen">
+                        <figcaption>
+                            <h3 class="offers-list__title">Меняет мир вокруг</h3>
+                            <p class="offers-list__text">Сделайте снимок и украсьте его смайликом или текстовой подписью,
+                                чтобы усилить эффект</p>
+                        </figcaption>
+                    </figure>
+
+                    <figure class="offers-list__item">
+                        <img class="offers-list__photo" src="img/iphone-3screen.png" alt="iphone-3screen">
+                        <figcaption>
+                            <h3 class="offers-list__title">Заводит новых друзей</h3>
+                            <p class="offers-list__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
+                                заводите новых</p>
+                        </figcaption>
+                    </figure>
+                </div>
+
+                <picture class="offers-list__photo--mobile">
+                    <source srcset="img/iphone-3screen--tablet.png" media="(min-width: 768px) and (max-width: 1023px)">
+                    <img src="img/iphone-3screen.png" alt="iphone-3screen">
+                </picture>
             </div>
-
-            <img class="offers-list__photo--mobile" src="img/iphone-3screen.png" alt="iphone-3screen">
         </div>
     </section>
 
@@ -399,7 +405,7 @@
 
     <section class="content-section contacts">
         <div class="content-section__wrapper">
-            <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
+            <h2 class="contacts__title">Остались вопросы?<br> Свяжитесь с нами!</h2>
 
             <div class="contacts__items">
                 <div class="contacts__item">
@@ -438,7 +444,10 @@
 <footer class="content-section footer">
     <div class="content-section__wrapper">
         <a class="footer__link-logo" href="/">
-            <img class="footer__logo" src="img/logo-footer.svg" alt="footer-logo">
+            <picture>
+                <source srcset="img/logo-footer.svg" media="(min-width: 1024px)">
+                <img class="footer__logo" src="img/logo-footer--tablet.svg" alt="footer-logo">
+            </picture>
         </a>
 
         <div class="footer__socials">
