--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
                     </picture>
                 </a>
 
-                <img class="burger-open" id="burger-menu" src="img/menu-burger.svg" alt="menu">
-                <img class="burger-close" src="img/menu-cross.svg" alt="close">
+                <input class="burger__toggle" id="burger__toggle" type="checkbox">
+                <label class="burger__btn" for="burger__toggle">
+                    <span></span>
+                </label>
             </div>
         </div>
-
 
         <nav class="navigation">
             <a class="navigation__link" href="javascript:;">Главная</a>
@@ -51,26 +52,25 @@
     <section class="banner__wrapper">
         <div class="banner__sub-wrapper">
             <h2 class="banner__title">Взгляните на жизнь иначе!</h2>
-            <div class="banner-info">
-                <div class="banner-info__wrapper">
-                    <a class="banner-info__link" href="javascript:;">Скачать приложение</a>
+            <div class="app-download">
+                <div class="app-download__wrapper">
+                    <a class="app-download__link" href="javascript:;">Скачать приложение</a>
 
-                    <div class="banner-info__brands">
-                        <a class="banner-info__brand-link" href="https://www.apple.com/" target="_blank">
-                            <img class="banner-info__brand-apple" src="img/apple-logo.svg" alt="brand-apple">
+                    <div class="app-download__brands">
+                        <a class="app-download__brand-link" href="https://www.apple.com/" target="_blank">
+                            <img class="app-download__brand-apple" src="img/apple-logo.svg" alt="brand-apple">
                         </a>
 
-                        <a class="banner-info__brand-link" href="https://www.android.com/" target="_blank">
-                            <img class="banner-info__brand-android" src="img/android-logo.svg" alt="brand-apple">
+                        <a class="app-download__brand-link" href="https://www.android.com/" target="_blank">
+                            <img class="app-download__brand-android" src="img/android-logo.svg" alt="brand-apple">
                         </a>
 
-                        <a class="banner-info__brand-link" href="https://www.microsoft.com/" target="_blank">
-                            <img class="banner-info__brand-microsoft" src="img/microsoft-logo.svg" alt="brand-apple">
-
+                        <a class="app-download__brand-link" href="https://www.microsoft.com/" target="_blank">
+                            <img class="app-download__brand-microsoft" src="img/microsoft-logo.svg" alt="brand-apple">
                         </a>
                     </div>
 
-                    <span class="banner-info__descr">
+                    <span class="app-download__descr">
                         Доступно для iPhone, iPad, Android,
                         Windows Phone, OS X, Windows 8
                     </span>
