--- a/pages/form.html
+++ b/pages/form.html
@@ -49,6 +49,18 @@
     </section>
 </div>
 
+<main class="main">
+    <section class="content-section ad">
+        <div class="content-section__wrapper">
+            <h2 class="ad__title">
+                Поделитесь своей историей и получите
+                шанс выиграть ценный приз — 1000
+                миль на вашу бонусную карту! <span class="hide-on-mobile">Пожалуйста, заполните форму ниже:</span>
+            </h2>
+        </div>
+    </section>
+</main>
+
 <footer class="content-section footer footer--form-mobile">
     <div class="content-section__wrapper">
         <a class="footer__link-logo" href="/">
