added components form and user-data

--- a/pages/form.html
+++ b/pages/form.html
@@ -59,6 +59,27 @@
             </h2>
         </div>
     </section>
+
+    <form class="content-section form">
+        <div class="content-section__wrapper">
+            <div class="user-data">
+                <label class="user-data__item">
+                    <span class="user-data__title">фамилия:</span>
+                    <input class="user-data__input" type="text" placeholder="Укажите фамилию *" required>
+                </label>
+
+                <label class="user-data__item">
+                    <span class="user-data__title">имя:</span>
+                    <input class="user-data__input" type="text" placeholder="Введите ваш имя *" required>
+                </label>
+
+                <label class="user-data__item">
+                    <span class="user-data__title">отчество:</span>
+                    <input class="user-data__input" type="text" placeholder="Ну и отчество тоже">
+                </label>
+            </div>
+        </div>
+    </form>
 </main>
 
 <footer class="content-section footer footer--form-mobile">
