added components: achievements, form-item, check

--- a/pages/form.html
+++ b/pages/form.html
@@ -61,8 +61,8 @@
     </section>
 
     <form class="content-section form">
-        <div class="content-section__wrapper">
-            <div class="user-data">
+        <div class="user-data">
+            <div class="content-section__wrapper">
                 <label class="user-data__item">
                     <span class="user-data__title">фамилия:</span>
                     <input class="user-data__input" type="text" placeholder="Укажите фамилию *" required>
@@ -79,6 +79,51 @@
                 </label>
             </div>
         </div>
+
+        <fieldset class="form-item achievements">
+            <div class="content-section__wrapper">
+                <h2 class="form-item__title">
+                    Ваши безбашенные
+                    достижения в путешествии
+                </h2>
+
+                <label class="check achievements__item">
+                    <input class="check__input" type="checkbox" checked>
+                    <span class="check__box"></span>
+                    Сделал селфи с акулой
+                </label>
+
+                <label class="check achievements__item">
+                    <input class="check__input" type="checkbox" checked>
+                    <span class="check__box"></span>
+                    Обгорел на пляже
+                </label>
+
+                <label class="check achievements__item">
+                    <input class="check__input" type="checkbox">
+                    <span class="check__box"></span>
+                    Видел Чака Норриса
+                </label>
+
+                <label class="check achievements__item">
+                    <input class="check__input" type="checkbox">
+                    <span class="check__box"></span>
+                    Накупил сувениров
+                </label>
+
+                <label class="check achievements__item">
+                    <input class="check__input" type="checkbox" checked>
+                    <span class="check__box"></span>
+                    Удержал башню
+                </label>
+
+                <label class="check achievements__item">
+                    <input class="check__input" type="checkbox">
+                    <span class="check__box"></span>
+                    Разгромил отель
+                </label>
+            </div>
+        </fieldset>
     </form>
 </main>
 
